[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vrint"
version = "0.1.0"
description = "A package that provides a verbose print function"
authors = [
    { name = "Huayra1", email = "Huayra1@live.no" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
